# Commandeer

./: .gitignore  CMakeLists.txt  Commandeer.cpp  Commandeer.sln  Commandeer.vcxproj  Commandeer.vcxproj.filters  LICENSE  README.md
.github/workflows/: main.yml
src/: Commandeer.cpp  browser.hpp  commandeer.cpp  commandeer.hpp  os.cpp  os.hpp  pch.h
src/Browsers/: Brave.cpp  Brave.h  Brave.hpp  Browser.cpp  Browser.h  Browser.hpp
src/OS/: OS.h  OS.hpp  Windows.cpp  Windows.h  Windows.hpp
src/browsers/: brave.cpp  brave.hpp  browser.cpp  browser.hpp
src/os/: windows.cpp  windows.hpp
